WebCore/editing/ReplaceSelectionCommand.h
@@ -69,6 +69,7 @@ private:
     
     void negateStyleRulesThatAffectAppearance();
     void handleStyleSpans();
+    void copyStyleToChildren(Node* parentNode, const CSSMutableStyleDeclaration* parentStyle);
     void handlePasteAsQuotationNode();
     
     virtual void removeNodePreservingChildren(Node*);
